--- a/css/style.css
+++ b/css/style.css
@@ -237,7 +237,7 @@ details[open] div{
   border: none;
   width: 38vh;
   display: block;
-
+  margin-top: 3vh;
   margin-bottom: 2vh;
 }
 footer{    
