--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,9 @@
     background: #000;
     
   }
+  .darklist{
+    background: #fff
+  }
   section{
     display:grid;
     min-height: 52vh;
@@ -118,7 +121,19 @@
 .tvImg{
   width:80%;
   height:auto;
-  margin: 7%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  z-index: 1;
+}
+.tvImg1{
+  width:80%;
+  height:auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  z-index: 20000;
+  position: relative;
 }
 .tvCharacter{
   width:85%;
@@ -275,4 +290,108 @@ footer{
 }
 .footerOption:hover{
   text-decoration: underline;
+}
+.tvVid{
+  width: 27vh;
+  height:auto;
+  margin-left: 9.5vh;
+  margin-top:-23.6vh;
+  z-index: -1;
+}
+.tvVid2{
+  width: 23vh;
+  height:auto;
+  margin-left:11.5vh;
+  margin-top:-25vh;
+  z-index: -0;
+  position: absolute
+}
+
+@media all and (min-width: 1200px) {
+  section{
+    display:grid;
+    min-height: 75vh;
+    position: relative;
+    z-index: 1;
+  }
+  .logo{
+    height: 7vh;
+    width: auto;
+    margin-left: 6vh;
+    margin-top: 35px;
+}
+.signInBtn{
+  background-color: #e50914;
+  float: right;
+  font-size: 1.2rem;
+  line-height: normal;
+  padding: 10px 15px;
+  border-radius: 3px;
+  border:none;
+  margin-top: -50px;
+  cursor: pointer;
+  margin-right: 4vh;
+}
+  .text{
+    text-align: center;
+    justify-content: center;
+    display:table-cell;
+    vertical-align: middle;
+    margin-top: 8vh;
+  }
+  .mainText{
+    margin-top: 10vh;
+    margin-left: auto;
+    margin-right:auto;
+    font-size: 4em;
+    max-width: 80vh;
+  }
+  .textSub{
+    margin: 3%;
+    font-size: 2.3em;
+  }
+  .textToEmail{
+    font-size:1.5em;
+    margin-bottom:1vh;
+    max-width: 70%;
+    margin-left: 13%;
+  }
+  .form__input {
+    font-family: 'Roboto', sans-serif;
+    color: #333;
+    font-size: 1.6vh;
+    margin: 0 auto;
+    padding: 1.8rem 1rem;
+    background-color: rgb(255, 255, 255);
+    border: none;
+    width: 52vh;
+    display: block;
+    display: inline-block;
+    margin-left: -10vh;
+  }
+  .button-1 {
+    background-color: #e50914;
+    border-radius: 2px;
+    border-style: none;
+    box-sizing: border-box;
+    color: #FFFFFF;
+    cursor: pointer;
+    font-size: 35px;
+    font-weight: 500;
+    height: 7vh;
+    line-height: 60px;
+    list-style: none;
+    margin: 0;
+    outline: none;
+    padding: 2px 50px;
+    position: relative;
+    text-align: left;
+    text-decoration: none;
+    transition: color 100ms;
+    vertical-align: baseline;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    align-items: center;
+  }
 }
