--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,8 @@
   font-size:1.2em;
   margin-bottom:1vh;
   max-width: 70%;
-  margin-left: 13%;
+  margin:auto;
+  margin-bottom: 10px;
 }
 .form__input {
   font-family: 'Roboto', sans-serif;
@@ -115,23 +116,21 @@
   text-align:center;
   max-width: 47vh;
   font-size:18px;
-  margin-left:10px;
-  margin-top: 20px;
+  margin-top: 15px;
+  margin:auto;
 }
 .tvImg{
   width:80%;
   height:auto;
   display: block;
-  margin-left: auto;
-  margin-right: auto;
+  margin:auto;
   z-index: 1;
 }
 .tvImg1{
   width:80%;
   height:auto;
   display: block;
-  margin-left: auto;
-  margin-right: auto;
+  margin:auto;
   z-index: 20000;
   position: relative;
 }
@@ -292,17 +291,17 @@ footer{
   text-decoration: underline;
 }
 .tvVid{
-  width: 27vh;
+  width: 30vh;
   height:auto;
-  margin-left: 9.5vh;
-  margin-top:-23.6vh;
+  margin-left: 10.5vh;
+  margin-top:-26.6vh;
   z-index: -1;
 }
 .tvVid2{
-  width: 23vh;
+  width: 26vh;
   height:auto;
-  margin-left:11.5vh;
-  margin-top:-25vh;
+  margin-left:12.5vh;
+  margin-top:-28vh;
   z-index: -0;
   position: absolute
 }
